2007-06-14  Dave Morrison  <drm@finkproject.org>

	* Services.pm: fix possible undefined hash key; be more forgiving (and 
	smarter) about the version-string we return (backport from HEAD)

2007-06-12  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't try to validate dummy packages without info file (backport from HEAD).	
	* Package.pm: Use prompt_selection for menu of choices (backport from HEAD).

2007-06-12  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix detection of modular X.org

2007-06-12  Dave Morrison  <drm@finkproject.org>

	* Services.pm: test for existence of gcc_select before calling it

2007-06-12  Dave Morrison  <drm@finkproject.org>

	* Services.pm: fall back to checking the gcc symlink if
	gcc_select is not there (backport from HEAD, change made by 
	rangerrick on 2007-06-11)

2007-06-09  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: Warn if .info has "SplitOff1" instead of "SplitOff" 
	(backport from HEAD, change made by dmacks on 2007-06-06)
	* PkgVersion.pm: use Fink::Command::cp

2007-05-31  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm, Validation.pm: Backport conditional
	ConfFiles and Shlibs to branch_0.27 (target release 0.27.2)

2007-04-27  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: (backport from HEAD) Parse a greater variety of 
	Version strings from the X server.

2007-03-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm: revert the OldIndexes behavior, this is something
	better worked on with dmacks' SelfUpdate refactor

2007-03-17  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: modify an error message

2007-03-14  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.4.9

2007-03-13  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Remind user to selfupdate after enabling unstable

2007-03-04  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in, PkgVersion.pm, Validation.pm: implement Info4
